--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,12 @@
     "php": ">=7.0",
     "yiisoft/yii2": "2.*"
   },
+  "require-dev": {
+    "yiisoft/yii2-codeception": "2.0.*",
+    "codeception/codeception": "2.1.8",
+    "codeception/specify": "0.4.*",
+    "codeception/verify": "0.2.*"
+  },
   "autoload": {
     "psr-4": {
       "simaland\\pgstatstatements\\": "src"
