--- a/tests/unit.suite.yml
+++ b/tests/unit.suite.yml
@@ -7,3 +7,8 @@ modules:
     enabled:
         - Asserts
         - \Helper\Unit
+        - Yii2
+        - Db
+    config:
+        Yii2:
+            configFile: 'tests/_config/unit.php'
