--- a/tests/codeception.yml
+++ b/tests/codeception.yml
@@ -1,11 +1,11 @@
 namespace: tests
 actor: Tester
 paths:
-    tests: tests
-    log: tests/_output
-    data: tests/_data
-    support: tests/_support
-    envs: tests/_envs
+    tests: .
+    log: _output
+    data: _data
+    support: _support
+    envs: _envs
 settings:
     bootstrap: _bootstrap.php
     colors: true
