add visualization for aggregate_pg_stat_statements

--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,12 @@
       "simaland\\pgstatstatements\\": "src"
     }
   },
+  "extra": {
+    "asset-installer-paths": {
+      "npm-asset-library": "vendor/npm",
+      "bower-asset-library": "vendor/bower"
+    }
+  },
   "scripts": {
     "test": "./vendor/bin/codecept run"
   }
