--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ cache:
 
 install:
   - travis_retry composer self-update
+  - travis_retry composer global require "fxp/composer-asset-plugin:^1.2.0"
   - travis_retry composer install --prefer-dist --no-interaction
 
 script:
